* adding compare number